GC参数测试