@@ -1,6 +1,6 @@
-学习笔记
+## 作业内容
 
-第一课作业实践
+> Week01 作业题目（周三）：
 
 1、自己写一个简单的 Hello.java，里面需要涉及基本类型，四则运行，if 和 for，然后 自己分析一下对应的字节码，有问题群里讨论。
 ```
@@ -46,3 +46,17 @@
 3、画一张图，展示 Xmx、Xms、Xmn、Meta、DirectMemory、Xss 这些内存参数的 关系。![iamge](resources/JVM参数与内存模型.png)
 
 4、检查一下自己维护的业务系统的 JVM 参数配置，用 jstat 和 jstack、jmap 查看一下 详情，并且自己独立分析一下大概情况，思考有没有不合理的地方，如何改进。 注意:如果没有线上系统，可以自己 run 一个 web/java 项目。
+
+> Week01 作业题目（周六）：
+
+1.（选做）本机使用 G1 GC 启动一个程序，仿照课上案例分析一下 JVM 情况。
+
+注意关闭自适应参数：-XX:-UseAdaptiveSizePolicy
+
+> java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseSerialGC -jar gateway-server-0.0.1-SNAPSHOT.jar
+> java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseParallelGC -jar gateway-server-0.0.1-SNAPSHOT.jar
+> java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseConcMarkSweepGC -jar gateway-server-0.0.1-SNAPSHOT.jar
+> java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -jar gateway-server-0.0.1-SNAPSHOT.jar
+
+> 如果jmc连不上进程，需要在启动的进程加上如下参数开启jmx
+-XX:+UnlockCommercialFeatures -Dcom.sun.management.jmxremote.rmi.port=8192 -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=8192 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Djava.rmi.server.hostname=localhost  
